--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <!--This is coding for the How to website gif... I converted a .mov into a .gif online and used basic img coding-->
 
           <div class="col-md-6">
-              <img src="Howto.gif" style="width: 110%" style="length: 110%">
+              <img src="Untitled.gif" style="width: 110%" style="length: 110%">
           </div>
         </div>
       </div>
